# docs/swagger.json
@@ -61,11 +61,22 @@
                   "password"
                 ],
                 "properties": {
-                  "name": {
+                  "first_name": {
                     "description": "User's name",
                     "type": "string",
-                    "example": "John Doe",
+                    "example": "John",
                     "minLength": 3
+                  },
+                  "last_name": {
+                    "description": "User's lastname",
+                    "type": "string",
+                    "example": "Doe",
+                    "minLength": 3
+                  },
+                  "dateOfBirth": {
+                    "description": "User's dateOfBirth",
+                    "type": "string",
+                    "example": "18.01.1989"
                   },
                   "email": {
                     "description": "User's email",
@@ -79,6 +90,16 @@
                     "example": "12345678",
                     "minLength": 8,
                     "maxLength": 64
+                  },
+                  "photo": {
+                    "description": "User's photo",
+                    "type": "string",
+                    "example": "img_3567.jpeg"
+                  },
+                  "telephone": {
+                    "description": "User's phone number",
+                    "type": "string",
+                    "example": "0666679494"
                   },
                   "gender": {
                     "description": "User's gender",
@@ -296,6 +317,90 @@
         "description": "Refresh a user",
         "operationId": "update-current-user",
         "security": [],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "first_name": {
+                    "description": "User's name",
+                    "type": "string",
+                    "example": "John",
+                    "minLength": 3
+                  },
+                  "last_name": {
+                    "description": "User's lastname",
+                    "type": "string",
+                    "example": "Doe",
+                    "minLength": 3
+                  },
+                  "dateOfBirth": {
+                    "description": "User's dateOfBirth",
+                    "type": "string",
+                    "example": "18.01.1989"
+                  },
+                  "email": {
+                    "description": "User's email",
+                    "maxLength": 64,
+                    "type": "string",
+                    "example": "email@example.com"
+                  },
+                  "password": {
+                    "description": "User's password",
+                    "type": "string",
+                    "example": "12345678",
+                    "minLength": 8,
+                    "maxLength": 64
+                  },
+                  "photo": {
+                    "description": "User's photo",
+                    "type": "string",
+                    "example": "img_3567.jpeg"
+                  },
+                  "telephone": {
+                    "description": "User's phone number",
+                    "type": "string",
+                    "example": "0666679494"
+                  },
+                  "gender": {
+                    "description": "User's gender",
+                    "type": "string",
+                    "enum": [
+                      "woman",
+                      "man"
+                    ],
+                    "default": "woman"
+                  },
+                  "role": {
+                    "type": "string",
+                    "enum": [
+                      "user",
+                      "admin"
+                    ],
+                    "default": "user"
+                  },
+                  "agree": {
+                    "type": "string",
+                    "default": "true",
+                    "enum": [
+                      "true",
+                      "false"
+                    ]
+                  },
+                  "language": {
+                    "type": "string",
+                    "enum": [
+                      "en",
+                      "uk"
+                    ],
+                    "default": "uk"
+                  }
+                }
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
             "description": "Refreshes the session",
@@ -831,11 +936,11 @@
           "Orders"
         ],
         "summary": "Get low stock products",
-        "operationId": "reserveProductController",
+        "operationId": "getLowStockProductsController",
         "security": [],
         "responses": {
           "200": {
-            "description": "List of products with stockQuantity < 5",
+            "description": "List of products with low stock (less than 5)",
             "content": {
               "application/json": {
                 "schema": {
@@ -847,11 +952,11 @@
               }
             }
           },
-          "400": {
-            "description": "Invalid request parameters"
-          },
           "404": {
-            "description": "No products found"
+            "$ref": "#/components/responses/404"
+          },
+          "500": {
+            "$ref": "#/components/responses/500"
           }
         }
       }
@@ -1108,7 +1213,7 @@
         "type": "object",
         "required": [
           "agree",
-          "name",
+          "first_name",
           "email",
           "password"
         ],
@@ -1118,8 +1223,15 @@
             "type": "string",
             "example": "true"
           },
-          "name": {
-            "description": "User's name",
+          "first_name": {
+            "description": "User's firstname",
+            "type": "string",
+            "example": "John Doe",
+            "minLength": 3,
+            "maxLength": 20
+          },
+          "last_name": {
+            "description": "User's lastname",
             "type": "string",
             "example": "John Doe",
             "minLength": 3,
@@ -1747,6 +1859,35 @@
           }
         }
       },
+      "404": {
+        "description": "NotFound error",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 404
+                },
+                "message": {
+                  "type": "string",
+                  "example": "NotFoundError"
+                },
+                "data": {
+                  "type": "string",
+                  "example": "Not found"
+                }
+              }
+            }
+          }
+        }
+      },
       "409": {
         "description": "Conflict error",
         "content": {
@@ -1770,6 +1911,35 @@
                 "data": {
                   "type": "string",
                   "example": "Email in use"
+                }
+              }
+            }
+          }
+        }
+      },
+      "500": {
+        "description": "Conflict error",
+        "content": {
+          "application/json": {
+            "schema": {
+              "type": "object",
+              "required": [
+                "status",
+                "message",
+                "data"
+              ],
+              "properties": {
+                "status": {
+                  "type": "integer",
+                  "example": 500
+                },
+                "message": {
+                  "type": "string",
+                  "example": "UnknownError"
+                },
+                "data": {
+                  "type": "string",
+                  "example": "Failed to send the email, please try again later."
                 }
               }
             }
